Fixed tab overflow issue

--- a/custom.css
+++ b/custom.css
@@ -24,11 +24,14 @@
   nav.tabs article.tab form,
   nav.tabs article.tab form {
     margin: 0;
-    width: 80vw;
+    width: 90vw;
   }
 
+  nav.tabs ul.horizontal.tabs > li > article.tab {
+    width: auto; 
+  }
   nav.tabs article.tab p {
-    width: 100%;
+    width: auto;
   }
 
   nav.workspace article footer {
@@ -66,6 +69,10 @@
     }
 
 /* layout */
+  p + p {
+    text-indent: 1rem;
+  }
+
   details summary:focus,
   details[open] summary {
     outline: none;
